
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(detectCapitalUse detectCapitalUse.cpp)
add_executable(addTwoNumbers addTwoNumbers.cpp)

add_executable(lengthOfLongestSubstring lengthOfLongestSubstring.cpp)
add_executable(maxProduct maxProduct.cpp)
add_executable(findMedianSortedArrays findMedianSortedArrays.cpp)

add_executable(shuffleArray shuffleArray.cpp)
add_executable(longestPalindrome longestPalindrome.cpp)
add_executable(buddyStrings buddyStrings.cpp)
add_executable(ZigZagConversion ZigZagConversion.cpp)
add_executable(ReverseInteger ReverseInteger.cpp)

add_executable(217containsDuplicate 217containsDuplicate.cpp)
add_executable(027maxSubArray 027maxSubArray.cpp)
add_executable(088mergeSortedArray 088mergeSortedArray.cpp)
add_executable(008myAtoi 008myAtoi.cpp)
add_executable(350intersect 350intersect.cpp)
add_executable(121maxProfit 121maxProfit.cpp)
add_executable(566matrixReshape 566matrixReshape.cpp)
add_executable(118PascalTriangle 118PascalTriangle.cpp)
add_executable(036isValidSudoku 036isValidSudoku.cpp)