cmake_minimum_required(VERSION 3.16)
project(offer)

set(CMAKE_CXX_STANDARD 14)

add_executable(offer main.cpp)
add_executable(09CQueue 09CQueue.cpp)
add_executable(30MinStack 30MinStack.cpp)
add_executable(35copyRandomList 35copyRandomList.cpp)
add_executable(32BinaryTreeLevelOrderTraversal 32BinaryTreeLevelOrderTraversal.cpp)
add_executable(57twoSum 57twoSum.cpp)
add_executable(41MedianFinder 41MedianFinder.cpp)
add_executable(29spiralOrder 29spiralOrder.cpp)
add_executable(20isNumber 20isNumber.cpp)